# neuros

./: .envrc  .gitignore  .gitmodules  .vale.ini  Cargo.toml  Containerfile  Dockerfile  Makefile  README.md  build.zig  build.zig.zon  flake.nix  rust-toolchain.toml
.github/styles/config/vocabularies/NeurOS/: accept.txt
.github/workflows/: build.yml  linux.yml  macos.yml  windows.yml
bootloader/: limine.cfg
container/: Dockerfile  Makefile
initrd/etc/: motd
initrd/usr/share/fonts/: ter-i16b.psf
initrd/usr/share/images/: evil.ppm  logo.pbm  logo.ppm
kernel/: Cargo.toml  Makefile  build.rs  linker.ld  rust-toolchain.toml
kernel/src/: acpi.rs  ansi.rs  elf.rs  font.rs  gdt.rs  idt.rs  image.rs  init.rs  initrd.rs  interrupts.rs  intro.rs  ipc.rs  keyboard.rs  logger.rs  main.rs  memory.rs  process.rs  scheduler.rs  serial.rs  shell.rs  smp.rs  syscall.rs  timer.rs  userspace.rs  vga.rs
kernel/src/resource/: ter-i16n.psf
server/display/: Cargo.toml  build.rs
server/display/src/: main.rs
src/initrd/etc/: passwd
src/initrd/usr/share/images/: neuro.ppm
src/kernel/: ansi.zig  initrd.zig  linker.ld  logger.zig  main.zig  memory.zig  serial.zig  shell.zig  smp.zig  vga.zig
syscall/: Cargo.toml
syscall/src/: lib.rs
userland/init/: Cargo.toml  build.rs  linker.ld
userland/init/src/: main.rs
